test/compiler/pass/_fdecl_equality.ods
do foo = () -> return 42
do print((bar = () -> return "hi") == foo)
do print(foo == foo)
do print((baz = () -> return true) == baz)
