test/compiler/fail/_fdecl_anon.ods
do get_add = () -> return (x, y) -> return x + y
do sum = get_add()
do sum(40, true)
